--- a/SmartWicket.DataBase/App.Config
+++ b/SmartWicket.DataBase/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SmartWicketEntities" connectionString="metadata=res://*/SmartWicketDataBase.csdl|res://*/SmartWicketDataBase.ssdl|res://*/SmartWicketDataBase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=EisVollen;initial catalog=SmartWicket;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SmartWicketEntities" connectionString="metadata=res://*/SmartWicketDataBase.csdl|res://*/SmartWicketDataBase.ssdl|res://*/SmartWicketDataBase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=EISVOLLEN;initial catalog=SmartWicket;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
